# Waw3DRenderer

./: .gitignore  .gitmodules  Application.cpp  CMakeLists.txt  README.md
examples/: CMakeLists.txt  MandoHelmet.cpp  Spaceship.cpp
src/: CMakeLists.txt  FPS.cpp  FPS.h  MathTriangle.h  Mesh.cpp  Mesh.h  WawMath.h  mat4x4.cpp  mat4x4.h  vec3d.cpp  vec3d.h
src/math/: CmakeLists.txt  Triangle.h  WawMath.h  mat4x4.cpp  mat4x4.h  vec3d.cpp  vec3d.h
